# deverb

./: .gitignore  CLAUDE.md  CMakeLists.txt  DeverbPlugin.h  LICENSE  README.md  config.h
.claude/skills/new-plugin/: SKILL.md
.claude/skills/run-ios-simulator/: SKILL.md
.github/workflows/: build-cmake.yml  build-mac.yml  build-wam.yml  build-win.yml  pages.yml  release-native.yml
Deverb/: CMakeLists.txt  Deverb.cpp  DeverbDSP.cpp  DeverbDSP.h
Deverb/config/: Deverb-mac.xcconfig
Deverb/postfish-src/: compat.h  feedback.c  lpc.c  postfish.h  reconstruct.c
Deverb/resources/: Deverb-VST3-Info.plist  Deverb-macOS-Info.plist
docs/: index.html
resources/: Deverb-AU-Info.plist  Deverb.icns  main.rc_mac_dlg
